Add heb json file, lang switch button

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -21,6 +21,10 @@
     "close": "Close",
     "options": "Options"
   },
+  "prefs": {
+    "hebrew": "עברית",
+    "english": "English"
+  },
   "messages": {
     "success": {
       "updateCalories": "Calories updated successfully",
