Add more translation terms across app

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -23,7 +23,9 @@
     "distribution": "Distribution",
     "editCalories": "Edit Calories",
     "editMacros": "Edit Macros",
-    "kcal": "kcal"
+    "kcal": "kcal",
+    "total": "Total",
+    "editMacrosButton": "Edit Macros"
   },
   "dashboard": {
     "title": "Dashboard",
@@ -37,7 +39,264 @@
     "delete": "Delete",
     "edit": "Edit",
     "close": "Close",
-    "options": "Options"
+    "options": "Options",
+    "clear": "Clear",
+    "reload": "Reload",
+    "selectDate": "Select date",
+    "or": "or",
+    "add": "Add",
+    "tryAgain": "Try Again",
+    "install": "Install",
+    "editOption": "Edit {{option}}",
+    "activate": "Activate",
+    "new": "New",
+    "show": "Show",
+    "hide": "Hide",
+    "search": "Search",
+    "name": "Name"
+  },
+  "auth": {
+    "signIn": "Sign in",
+    "signUp": "Sign up",
+    "login": "Login",
+    "fullName": "Full Name",
+    "email": "Email",
+    "password": "Password",
+    "validatePassword": "Validate Password",
+    "rememberMe": "Remember me",
+    "alreadyHaveAccount": "Already have an account? ",
+    "dontHaveAccount": "Don't have an account? ",
+    "loginIn": "Login in",
+    "resetPassword": "Reset password",
+    "resetPasswordDesc": "Enter your account's email address, and we'll send you a link to reset your password.",
+    "emailAddress": "Email address",
+    "continue": "Continue",
+    "fillRequired": "Please fill in all required fields correctly.",
+    "loginFailed": "Login failed. Please check your credentials.",
+    "loginSuccess": "Login successful!",
+    "invalidEmail": "Email must be a valid email address",
+    "fullNamePlaceholder": "Your full name",
+    "emailPlaceholder": "your@email.com",
+    "signInError": "An error occurred while signing in. Please try again.",
+    "pleaseEnterFullName": "Please enter your full name.",
+    "passwordMinLength": "Password must be at least 6 characters long.",
+    "validatePasswordMustMatch": "Validate password must be identical"
+  },
+  "meals": {
+    "breakfast": "Breakfast",
+    "lunch": "Lunch",
+    "dinner": "Dinner",
+    "snacks": "Snacks",
+    "duringTheDay": "During the day",
+    "addMeal": "Add Meal",
+    "editMeal": "Edit Meal",
+    "currentMeal": "Current Meal",
+    "meal": "Meal",
+    "mealName": "Meal Name",
+    "noMealsAdded": "No meals added yet",
+    "noItemsLogged": "No items logged yet",
+    "searchItem": "Search Item",
+    "scanItem": "Scan Item",
+    "item": "Item",
+    "customLog": "Custom Log",
+    "barcodeScanned": "Barcode Scanned",
+    "addToMeal": "Add to Meal",
+    "updateMeal": "Update Meal",
+    "numberOfServings": "Number of Servings",
+    "servingSize": "Serving Size",
+    "noItemsAdded": "No items added yet",
+    "addItem": "Add Item",
+    "noFavoriteItems": "No favorite items found",
+    "sortBy": "Sort by",
+    "custom": "Custom",
+    "searchItems": "Search items...",
+    "customItem": "Custom Item",
+    "noResults": "No results...",
+    "searchFirst": "Search for an item first...",
+    "meals": "Meals",
+    "favoriteItems": "Favorite Items",
+    "editSortBy": "Edit Sort by"
+  },
+  "workout": {
+    "noWorkoutSelected": "No workout selected",
+    "addExercise": "Add Exercise",
+    "finishWorkout": "Finish Workout",
+    "deleteWorkout": "Delete Workout",
+    "collapseAll": "Collapse all",
+    "expandAll": "Expand all",
+    "workoutDetails": "Workout Details",
+    "deleteWorkoutConfirm": "Are you sure you want to delete this workout?",
+    "editWorkout": "Edit Workout",
+    "createWorkout": "Create Workout",
+    "routines": "Routines",
+    "workouts": "Workouts",
+    "addNewRoutine": "Add New Routine",
+    "myTrainees": "My Trainees",
+    "startEmptyWorkout": "Start Empty Workout",
+    "noWorkoutsFound": "No workouts found",
+    "workoutByDate": "Workout by date",
+    "noWorkoutSessionThisDay": "No workout session this day",
+    "noPastRoutinesFound": "No past routines found",
+    "viewDetails": "View Details",
+    "deactivate": "Deactivate",
+    "mostPopularExercises": "Most Popular Exercises",
+    "exercisesFound": "exercises found",
+    "activeRoutines": "Active Routines",
+    "pastRoutines": "Past Routines",
+    "startRoutine": "Start Routine",
+    "editRoutine": "Edit Routine",
+    "enterWorkoutName": "Enter workout name",
+    "times": "Times",
+    "week": "Week",
+    "editTimesPerWeek": "Edit Times per week",
+    "timesPerWeek": "Times per week",
+    "addExercises": "Add Exercises",
+    "reorderExercises": "Reorder Exercises",
+    "changeWeekNumber": "Change Week Number",
+    "unsavedChangesWeek": "You have unsaved changes. Do you want to save before changing the week number?",
+    "noExercisesAdded": "No exercises added yet",
+    "saveWorkout": "Save Workout",
+    "noActiveWorkouts": "No active workouts found",
+    "searchExercises": "Search exercises...",
+    "searchForExercises": "Search for exercises",
+    "workoutByDate": "Workout by date",
+    "noWorkoutSessionThisDay": "No workout session this day"
+  },
+  "exercise": {
+    "deleteSet": "Delete Set",
+    "addSet": "Add Set",
+    "markAsDone": "Mark as done",
+    "markAsNotDone": "Mark as not done",
+    "done": "Done",
+    "notDone": "Not done",
+    "reps": "Reps",
+    "weight": "Weight",
+    "addNotes": "Add Notes",
+    "editRestingTime": "Edit Resting Time",
+    "restingTime": "Resting time",
+    "instructions": "Instructions",
+    "viewBy": "View by",
+    "noInstructions": "No instructions found",
+    "set": "Set",
+    "date": "Date",
+    "topWeight": "Top weight",
+    "topReps": "Top Reps",
+    "notes": "Notes",
+    "viewNotes": "View notes",
+    "enterNotes": "Enter notes",
+    "collapse": "Collapse",
+    "expand": "Expand",
+    "exerciseDetails": "Exercise Details",
+    "changeExercise": "Change exercise",
+    "editMuscleGroup": "Edit Muscle Group",
+    "clearFilters": "Clear filters",
+    "muscleGroup": "Muscle Group",
+    "equipment": "Equipment",
+    "editEquipment": "Edit Equipment",
+    "rpe": "RPE",
+    "rir": "RIR",
+    "noExercisesFound": "No exercises found...",
+    "maxProgress": "Max Progress",
+    "pastSessions": "Past Sessions",
+    "noPastSessionsFound": "No past sessions found",
+    "sets": "Sets",
+    "previousWeekExpected": "Previous week expected:",
+    "actual": "Actual:",
+    "toggleToRir": "Toggle to RIR",
+    "toggleToRpe": "Toggle to RPE"
+  },
+  "equipment": {
+    "all": "All",
+    "barbell": "Barbell",
+    "dumbbell": "Dumbbell",
+    "machine": "Machine",
+    "bodyweight": "Bodyweight",
+    "cable": "Cable",
+    "bands": "Bands"
+  },
+  "weight": {
+    "updateWeight": "Update Weight",
+    "kg": "kg",
+    "settings": "Settings",
+    "displayWeeklyAverage": "Display Weekly Average",
+    "displayWeightChange": "Display Weight Change",
+    "weeklyAverageColor": "Weekly Average Color",
+    "goalWeight": "Goal weight",
+    "estimatedWeight": "Estimated weight",
+    "noWeightLogged": "No weight logged",
+    "noChange": "No change",
+    "weight": "Weight",
+    "weeklyAverage": "Weekly Average"
+  },
+  "goal": {
+    "addGoal": "Add Goal",
+    "editGoal": "Edit Goal",
+    "lose": "Lose",
+    "maintain": "Maintain",
+    "gain": "Gain",
+    "calories": "Calories",
+    "grams": "Grams",
+    "percentages": "Percentages",
+    "enterGoalTitle": "Enter goal title..."
+  },
+  "user": {
+    "logout": "Logout",
+    "viewProfile": "View Profile",
+    "profilePicture": "Profile Picture",
+    "editUser": "Edit User",
+    "noImage": "No image",
+    "fullname": "Fullname",
+    "birthdate": "Birthdate",
+    "height": "Height",
+    "gender": "Gender",
+    "activity": "Activity",
+    "activityLevel": "Activity level",
+    "deleteAccountConfirm": "Are you sure you want to delete your account?",
+    "deleteAccountIrreversible": "This action is irreversible and will delete all your data.",
+    "male": "Male",
+    "female": "Female",
+    "userProfile": "User Profile",
+    "image": "Image",
+    "uploadImage": "Upload Image",
+    "uploading": "Uploading...",
+    "deleteAccount": "Delete Account"
+  },
+  "trainer": {
+    "addTrainee": "Add Trainee",
+    "searchForTrainee": "Search for a trainee",
+    "noTraineesFound": "No trainees found...",
+    "noAssignedTrainees": "No assigned trainees yet...",
+    "accept": "Accept",
+    "reject": "Reject",
+    "accepted": "Accepted",
+    "rejected": "Rejected",
+    "pending": "Pending",
+    "searchPlaceholder": "Search by email address, phone number, or user UID"
+  },
+  "bmr": {
+    "title": "BMR",
+    "activityBuffer": "Activity buffer",
+    "dailyCaloriesBurned": "Daily calories burned",
+    "reset": "Reset",
+    "none": "None",
+    "low": "1-3 / wk",
+    "medium": "4-5 / wk",
+    "high": "Daily",
+    "gender": "Gender",
+    "age": "Age",
+    "height": "Height",
+    "weight": "Weight"
+  },
+  "diary": {
+    "previousDayLogs": "Previous day logs"
+  },
+  "day": {
+    "previousDay": "Previous day",
+    "nextDay": "Next day"
+  },
+  "pwa": {
+    "installApp": "Install the app",
+    "installBestExperience": "To get the best experience, please install the app."
   },
   "prefs": {
     "hebrew": "עברית",
