--- a/src/assets/locales/he.json
+++ b/src/assets/locales/he.json
@@ -23,7 +23,9 @@
     "distribution": "אחוזים",
     "editCalories": "עריכת קלוריות",
     "editMacros": "עריכת ערכים תזונתיים",
-    "kcal": "קל׳"
+    "kcal": "קל׳",
+    "total": "סה\"כ",
+    "editMacrosButton": "עריכת ערכים תזונתיים"
   },
   "dashboard": {
     "title": "דף הבית",
@@ -35,9 +37,264 @@
     "save": "שמור",
     "cancel": "ביטול",
     "delete": "מחק",
-    "edit": "ערוך",
+    "edit": "עריכה",
     "close": "סגור",
-    "options": "אפשרויות"
+    "options": "אפשרויות",
+    "clear": "ניקוי",
+    "reload": "רענן",
+    "selectDate": "בחר תאריך",
+    "or": "או",
+    "add": "הוספה",
+    "tryAgain": "נסה שוב",
+    "install": "התקן",
+    "editOption": "עריכה {{option}}",
+    "activate": "הפעל",
+    "new": "חדש",
+    "show": "הצג",
+    "hide": "הסתר",
+    "search": "חיפוש",
+    "name": "שם"
+  },
+  "auth": {
+    "signIn": "כניסה",
+    "signUp": "הרשמה",
+    "login": "התחברות",
+    "fullName": "שם מלא",
+    "email": "אימייל",
+    "password": "סיסמה",
+    "validatePassword": "אימות סיסמה",
+    "rememberMe": "זכור אותי",
+    "alreadyHaveAccount": "כבר יש לך חשבון? ",
+    "dontHaveAccount": "אין לך חשבון? ",
+    "loginIn": "התחבר",
+    "resetPassword": "איפוס סיסמה",
+    "resetPasswordDesc": "הזן את כתובת האימייל של החשבון שלך, ונשלח לך קישור לאיפוס הסיסמה.",
+    "emailAddress": "כתובת אימייל",
+    "continue": "המשך",
+    "fillRequired": "אנא מלא את כל השדות הנדרשים כראוי.",
+    "loginFailed": "ההתחברות נכשלה. אנא בדוק את פרטי ההתחברות.",
+    "loginSuccess": "ההתחברות הצליחה!",
+    "invalidEmail": "האימייל חייב להיות כתובת אימייל תקינה",
+    "fullNamePlaceholder": "השם המלא שלך",
+    "emailPlaceholder": "your@email.com",
+    "signInError": "אירעה שגיאה בעת ההתחברות. אנא נסה שוב.",
+    "pleaseEnterFullName": "אנא הזן את שמך המלא.",
+    "passwordMinLength": "הסיסמה חייבת להכיל לפחות 6 תווים.",
+    "validatePasswordMustMatch": "אימות הסיסמה חייב להיות זהה"
+  },
+  "meals": {
+    "breakfast": "ארוחת בוקר",
+    "lunch": "ארוחת צהריים",
+    "dinner": "ארוחת ערב",
+    "snacks": "חטיפים",
+    "duringTheDay": "במהלך היום",
+    "addMeal": "הוספת ארוחה",
+    "editMeal": "עריכת ארוחה",
+    "currentMeal": "ארוחה נוכחית",
+    "meal": "ארוחה",
+    "mealName": "שם ארוחה",
+    "noMealsAdded": "טרם נוספו ארוחות",
+    "noItemsLogged": "טרם נרשמו פריטים",
+    "searchItem": "חיפוש פריט",
+    "scanItem": "סריקת פריט",
+    "item": "פריט",
+    "customLog": "רישום ידני",
+    "barcodeScanned": "ברקוד נסרק",
+    "addToMeal": "הוספת פריט לארוחה",
+    "updateMeal": "עדכן ארוחה",
+    "numberOfServings": "מספר מנות",
+    "servingSize": "גודל מנה",
+    "noItemsAdded": "טרם נוספו פריטים",
+    "addItem": "הוספת פריט",
+    "noFavoriteItems": "לא נמצאו פריטים במועדפים",
+    "sortBy": "מיון לפי",
+    "custom": "מותאם",
+    "searchItems": "חיפוש פריטים...",
+    "customItem": "פריט מותאם",
+    "noResults": "אין תוצאות",
+    "searchFirst": "חפש פריט תחילה",
+    "meals": "ארוחות",
+    "favoriteItems": "פריטים מועדפים",
+    "editSortBy": "מיון לפי"
+  },
+  "workout": {
+    "noWorkoutSelected": "לא נבחר אימון",
+    "addExercise": "הוספת תרגיל",
+    "finishWorkout": "סיים אימון",
+    "deleteWorkout": "מחק אימון",
+    "collapseAll": "סגור הכל",
+    "expandAll": "הרחב הכל",
+    "workoutDetails": "פרטי אימון",
+    "deleteWorkoutConfirm": "האם אתה בטוח שברצונך למחוק אימון זה?",
+    "editWorkout": "עריכת אימון",
+    "createWorkout": "צור אימון",
+    "routines": "שגרות",
+    "workouts": "אימונים",
+    "addNewRoutine": "הוספת שגרה חדשה",
+    "myTrainees": "המתאמנים שלי",
+    "startEmptyWorkout": "התחל אימון ריק",
+    "noWorkoutsFound": "לא נמצאו אימונים",
+    "activeRoutines": "שגרות פעילות",
+    "pastRoutines": "שגרות קודמות",
+    "startRoutine": "התחל שגרה",
+    "editRoutine": "עריכת שגרה",
+    "enterWorkoutName": "הזן שם אימון",
+    "times": "פעמים",
+    "week": "שבוע",
+    "editTimesPerWeek": "מס׳ פעמים בשבוע",
+    "timesPerWeek": "פעמים בשבוע",
+    "addExercises": "הוספת תרגילים",
+    "reorderExercises": "סדר תרגילים",
+    "changeWeekNumber": "שנה מספר שבוע",
+    "unsavedChangesWeek": "יש לך שינויים שלא נשמרו. האם ברצונך לשמור לפני שינוי מספר השבוע?",
+    "noExercisesAdded": "טרם נוספו תרגילים",
+    "saveWorkout": "שמור אימון",
+    "noActiveWorkouts": "לא נמצאו אימונים פעילים",
+    "searchExercises": "חיפוש תרגילים...",
+    "searchForExercises": "חיפוש תרגילים",
+    "mostPopularExercises": "תרגילים פופולריים",
+    "exercisesFound": "{{count}} תרגילים נמצאו",
+    "viewDetails": "צפה בפרטים",
+    "deactivate": "השבת",
+    "noPastRoutinesFound": "לא נמצאו שגרות קודמות...",
+    "workoutByDate": "אימון לפי תאריך",
+    "noWorkoutSessionThisDay": "אין אימון מתוכנן ליום זה"
+  },
+  "exercise": {
+    "deleteSet": "מחק סט",
+    "addSet": "הוספת סט",
+    "markAsDone": "סמן כבוצע",
+    "markAsNotDone": "בטל סימון",
+    "done": "בוצע",
+    "notDone": "לא בוצע",
+    "reps": "חזרות",
+    "weight": "משקל",
+    "addNotes": "הוספת הערות",
+    "editRestingTime": "עריכת זמן מנוחה",
+    "restingTime": "זמן מנוחה",
+    "instructions": "הוראות",
+    "viewBy": "צפה לפי",
+    "noInstructions": "לא נמצאו הוראות",
+    "set": "סט",
+    "date": "תאריך",
+    "topWeight": "משקל מרבי",
+    "topReps": "חזרות מרביות",
+    "notes": "הערות",
+    "viewNotes": "צפה בהערות",
+    "enterNotes": "הזן הערות",
+    "collapse": "סגור",
+    "expand": "הרחב",
+    "exerciseDetails": "פרטי תרגיל",
+    "changeExercise": "החלף תרגיל",
+    "editMuscleGroup": "עריכת קבוצת שרירים",
+    "clearFilters": "נקה מסננים",
+    "muscleGroup": "קבוצת שרירים",
+    "equipment": "ציוד",
+    "editEquipment": "עריכת ציוד",
+    "rpe": "RPE",
+    "rir": "RIR",
+    "noExercisesFound": "לא נמצאו תרגילים...",
+    "maxProgress": "התקדמות מקסימלית",
+    "pastSessions": "אימונים קודמים",
+    "noPastSessionsFound": "לא נמצאו אימונים קודמים",
+    "sets": "סטים",
+    "previousWeekExpected": "צפי שבוע קודם:",
+    "actual": "בפועל:",
+    "toggleToRir": "החלף ל-RIR",
+    "toggleToRpe": "החלף ל-RPE"
+  },
+  "equipment": {
+    "all": "הכל",
+    "barbell": "מוט",
+    "dumbbell": "משקולת יד",
+    "machine": "מכונה",
+    "bodyweight": "משקל גוף",
+    "cable": "כבל",
+    "bands": "גומיות"
+  },
+  "weight": {
+    "updateWeight": "עדכן משקל",
+    "kg": "ק\"ג",
+    "settings": "הגדרות",
+    "displayWeeklyAverage": "הצג ממוצע שבועי",
+    "displayWeightChange": "הצג שינוי משקל",
+    "weeklyAverageColor": "צבע ממוצע שבועי",
+    "goalWeight": "משקל יעד",
+    "estimatedWeight": "משקל משוער",
+    "noWeightLogged": "לא נרשם משקל",
+    "noChange": "אין שינוי",
+    "weight": "משקל",
+    "weeklyAverage": "ממוצע שבועי"
+  },
+  "goal": {
+    "addGoal": "הוספת יעד",
+    "editGoal": "עריכת יעד",
+    "lose": "הרזייה",
+    "maintain": "שמירה",
+    "gain": "השמנה",
+    "calories": "קלוריות",
+    "grams": "גרמים",
+    "percentages": "אחוזים",
+    "enterGoalTitle": "הזן כותרת יעד..."
+  },
+  "user": {
+    "logout": "התנתק",
+    "viewProfile": "צפה בפרופיל",
+    "profilePicture": "תמונת פרופיל",
+    "editUser": "עריכת משתמש",
+    "noImage": "אין תמונה",
+    "fullname": "שם מלא",
+    "birthdate": "תאריך לידה",
+    "height": "גובה",
+    "gender": "מין",
+    "activity": "פעילות",
+    "activityLevel": "רמת פעילות",
+    "deleteAccountConfirm": "האם אתה בטוח שברצונך למחוק את החשבון?",
+    "deleteAccountIrreversible": "פעולה זו בלתי הפיכה ותמחק את כל הנתונים שלך.",
+    "male": "זכר",
+    "female": "נקבה",
+    "userProfile": "פרופיל משתמש",
+    "image": "תמונה",
+    "uploadImage": "העלה תמונה",
+    "uploading": "מעלה...",
+    "deleteAccount": "מחק חשבון"
+  },
+  "trainer": {
+    "addTrainee": "הוספת מתאמן",
+    "searchForTrainee": "חפש מתאמן",
+    "noTraineesFound": "לא נמצאו מתאמנים...",
+    "noAssignedTrainees": "טרם שויכו מתאמנים...",
+    "accept": "אשר",
+    "reject": "דחה",
+    "accepted": "אושר",
+    "rejected": "נדחה",
+    "pending": "ממתין",
+    "searchPlaceholder": "חפש לפי אימייל, טלפון או UID"
+  },
+  "bmr": {
+    "title": "BMR",
+    "activityBuffer": "חיץ פעילות",
+    "dailyCaloriesBurned": "קלוריות נשרפות יומיות",
+    "reset": "איפוס",
+    "none": "ללא",
+    "low": "1-3 / שבוע",
+    "medium": "4-5 / שבוע",
+    "high": "יומי",
+    "gender": "מין",
+    "age": "גיל",
+    "height": "גובה",
+    "weight": "משקל"
+  },
+  "diary": {
+    "previousDayLogs": "רישומים של יום קודם"
+  },
+  "day": {
+    "previousDay": "יום קודם",
+    "nextDay": "יום הבא"
+  },
+  "pwa": {
+    "installApp": "התקן את האפליקציה",
+    "installBestExperience": "כדי לקבל את החוויה הטובה ביותר, אנא התקן את האפליקציה."
   },
   "prefs": {
     "hebrew": "עברית",
@@ -64,7 +321,7 @@
     },
     "error": {
       "updateCalories": "שגיאה בעדכון הקלוריות",
-      "updateMacros": "שגיאה בעדכון המקרו",
+      "updateMacros": "שגיאה בעדכון הערכים התזונתיים",
       "search": "שגיאה בחיפוש",
       "favorite": "שגיאה בהוספה למועדפים",
       "editMeal": "שגיאה בעריכת הארוחה",
