--- a/src/assets/locales/he.json
+++ b/src/assets/locales/he.json
@@ -25,7 +25,8 @@
     "editMacros": "עריכת ערכים תזונתיים",
     "kcal": "קל׳",
     "total": "סה\"כ",
-    "editMacrosButton": "עריכת ערכים תזונתיים"
+    "editMacrosButton": "עריכת ערכים תזונתיים",
+    "gram": "גרם"
   },
   "dashboard": {
     "title": "דף הבית",
@@ -115,7 +116,19 @@
     "searchFirst": "חפש פריט תחילה",
     "meals": "ארוחות",
     "favoriteItems": "פריטים מועדפים",
-    "editSortBy": "מיון לפי"
+    "editSortBy": "ערוך מיון לפי",
+    "per100g": "100 גרם",
+    "perServing": "מנה",
+    "for": "ל",
+    "sortRelevance": "רלוונטיות",
+    "sortCaloriesHighToLow": "קלוריות (גבוה לנמוך)",
+    "sortCaloriesLowToHigh": "קלוריות (נמוך לגבוה)",
+    "sortProteinHighToLow": "חלבון (גבוה לנמוך)",
+    "sortProteinLowToHigh": "חלבון (נמוך לגבוה)",
+    "sortCarbsHighToLow": "פחמימות (גבוה לנמוך)",
+    "sortCarbsLowToHigh": "פחמימות (נמוך לגבוה)",
+    "sortFatHighToLow": "שומן (גבוה לנמוך)",
+    "sortFatLowToHigh": "שומן (נמוך לגבוה)"
   },
   "workout": {
     "noWorkoutSelected": "לא נבחר אימון",
@@ -128,17 +141,17 @@
     "deleteWorkoutConfirm": "האם אתה בטוח שברצונך למחוק אימון זה?",
     "editWorkout": "עריכת אימון",
     "createWorkout": "צור אימון",
-    "routines": "שגרות",
+    "routines": "אימונים",
     "workouts": "אימונים",
-    "addNewRoutine": "הוספת שגרה חדשה",
+    "addNewRoutine": "הוספת אימון חדשה",
     "myTrainees": "המתאמנים שלי",
     "startEmptyWorkout": "התחל אימון ריק",
     "noWorkoutsFound": "לא נמצאו אימונים",
-    "activeRoutines": "שגרות פעילות",
-    "pastRoutines": "שגרות קודמות",
-    "startRoutine": "התחל שגרה",
-    "editRoutine": "עריכת שגרה",
-    "enterWorkoutName": "הזן שם אימון",
+    "activeRoutines": "אימונים פעילים",
+    "pastRoutines": "אימונים קודמים",
+    "startRoutine": "התחלת אימון",
+    "editRoutine": "עריכת אימון",
+    "enterWorkoutName": "הזמנת שם אימון",
     "times": "פעמים",
     "week": "שבוע",
     "editTimesPerWeek": "מס׳ פעמים בשבוע",
@@ -149,14 +162,16 @@
     "unsavedChangesWeek": "יש לך שינויים שלא נשמרו. האם ברצונך לשמור לפני שינוי מספר השבוע?",
     "noExercisesAdded": "טרם נוספו תרגילים",
     "saveWorkout": "שמור אימון",
-    "noActiveWorkouts": "לא נמצאו אימונים פעילים",
+    "noActiveWorkouts": "אימונים פעילים לא נמצאו",
     "searchExercises": "חיפוש תרגילים...",
     "searchForExercises": "חיפוש תרגילים",
+    "getStartedByAdding": "התחל על ידי הוספת תרגיל לאימון",
+    "untitledWorkout": "אימון ללא כותרת",
     "mostPopularExercises": "תרגילים פופולריים",
     "exercisesFound": "{{count}} תרגילים נמצאו",
     "viewDetails": "צפה בפרטים",
     "deactivate": "השבת",
-    "noPastRoutinesFound": "לא נמצאו שגרות קודמות...",
+    "noPastRoutinesFound": "לא נמצאו אימונים קודמות...",
     "workoutByDate": "אימון לפי תאריך",
     "noWorkoutSessionThisDay": "אין אימון מתוכנן ליום זה"
   },
@@ -182,6 +197,8 @@
     "notes": "הערות",
     "viewNotes": "צפה בהערות",
     "enterNotes": "הזן הערות",
+    "notesPlaceholder": "הערות {{name}}",
+    "actualNotesLabel": "הערות בפועל:",
     "collapse": "סגור",
     "expand": "הרחב",
     "exerciseDetails": "פרטי תרגיל",
@@ -257,7 +274,12 @@
     "image": "תמונה",
     "uploadImage": "העלה תמונה",
     "uploading": "מעלה...",
-    "deleteAccount": "מחק חשבון"
+    "deleteAccount": "מחק חשבון",
+    "accordionMeals": "ארוחות",
+    "accordionGoals": "יעדים",
+    "accordionFavoriteItems": "פריטים מועדפים",
+    "accordionBmrCalculator": "מחשבון BMR",
+    "accordionPreferences": "העדפות"
   },
   "trainer": {
     "addTrainee": "הוספת מתאמן",
