Add more translations across app

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -288,6 +288,7 @@
     "searchForTrainee": "Search for a trainee",
     "noTraineesFound": "No trainees found...",
     "noAssignedTrainees": "No assigned trainees yet...",
+    "searchTraineeDescription": "Search for a trainee to add as a trainee",
     "accept": "Accept",
     "reject": "Reject",
     "accepted": "Accepted",
