Add is fixed menu switch, consitional rendering add log button based on that

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -343,7 +343,8 @@
     "english": "English",
     "darkMode": "Dark mode",
     "language": "Language",
-    "favoriteColor": "Favorite color"
+    "favoriteColor": "Favorite color",
+    "fixedMenu": "Fixed menu"
   },
   "date": {
     "from": "From",
