Add conditional rendering FixedMenu content based on menu state

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -134,7 +134,8 @@
     "sortFatLowToHigh": "Fat (low to high)"
   },
   "menu": {
-    "viewMenus": "View menus"
+    "viewMenus": "View menus",
+    "noMenuFound": "No menu found, create a new menu"
   },
   "workout": {
     "noWorkoutSelected": "No workout selected",
