--- a/src/assets/locales/he.json
+++ b/src/assets/locales/he.json
@@ -347,7 +347,8 @@
     "fixedMenu": "תפריט קבוע"
   },
   "menu": {
-    "viewMenus": "צפייה בתפריטים"
+    "viewMenus": "צפייה בתפריטים",
+    "noMenuFound": "לא נמצאו תפריטים, יש ליצור תפריט חדש"
   },
   "date": {
     "from": "מתאריך",
