Add initial EditMenu cmp

--- a/src/assets/locales/he.json
+++ b/src/assets/locales/he.json
@@ -348,7 +348,8 @@
   },
   "menu": {
     "viewMenus": "צפייה בתפריטים",
-    "noMenuFound": "לא נמצאו תפריטים, יש ליצור תפריט חדש"
+    "noMenuFound": "לא נמצאו תפריטים, יש ליצור תפריט חדש",
+    "editMenu": "עריכת תפריט"
   },
   "date": {
     "from": "מתאריך",
