--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -135,7 +135,8 @@
   },
   "menu": {
     "viewMenus": "View menus",
-    "noMenuFound": "No menu found, create a new menu"
+    "noMenuFound": "No menu found, create a new menu",
+    "editMenu": "Edit menu"
   },
   "workout": {
     "noWorkoutSelected": "No workout selected",
