--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -140,7 +140,8 @@
     "editMenu": "Edit menu",
     "defaultName": "Menu",
     "deleteMenu": "Delete menu",
-    "deleteMenuConfirm": "Are you sure you want to delete this menu?"
+    "deleteMenuConfirm": "Are you sure you want to delete this menu?",
+    "selectMenu": "Select menu"
   },
   "workout": {
     "noWorkoutSelected": "No workout selected",
