Add custom item support in menu localization and update related components for improved item handling

--- a/src/assets/locales/en.json
+++ b/src/assets/locales/en.json
@@ -141,7 +141,8 @@
     "defaultName": "Menu",
     "deleteMenu": "Delete menu",
     "deleteMenuConfirm": "Are you sure you want to delete this menu?",
-    "selectMenu": "Select menu"
+    "selectMenu": "Select menu",
+    "customItem": "Custom Item"
   },
   "workout": {
     "noWorkoutSelected": "No workout selected",
